<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.simon.bubble_level.Activity.MainActivity"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/windowBackground"
    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:text="@string/Button_spirit"
            android:id="@+id/button_spirit"
            android:onClick="startSpiritLevel"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="0dp"
            android:gravity="center|bottom"
            android:background="@color/Tuile_color"
            android:drawableTop="@drawable/niveau_icone2_xxhdpi" />

        <Button
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:text="@string/Button_bubble"
            android:id="@+id/button_bubble"
            android:onClick="startBubbleLevel"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="top|left"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|bottom"
            android:drawableTop="@drawable/nivelle_icone2_xxhdpi"
            android:background="@color/Tuile_color" />

        <Button
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:text="@string/Button_stud"
            android:id="@+id/button_stud"
            android:layout_gravity="left|center_horizontal"
            android:onClick="startStudDetector"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="0dp"
            android:gravity="center|bottom"
            android:drawableTop="@drawable/detecteur_montant_icone2_xxhdpi"
            android:background="@color/Tuile_color" />

        <Button
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:text="@string/Button_fils"
            android:id="@+id/button_fils"
            android:layout_gravity="top|left|center_horizontal"
            android:onClick="startFils"
            android:layout_row="1"
            android:layout_column="1"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|bottom"
            android:drawableTop="@drawable/detecteur_fils_icone2_xxhdpi"
            android:background="@color/Tuile_color" />

        <Button
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:text="@string/Button_tuyau"
            android:id="@+id/button_tuyau"
            android:layout_gravity="left|center_horizontal"
            android:onClick="startTuyau"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="0dp"
            android:gravity="center|bottom"
            android:drawableTop="@drawable/detecteur_tuyaux_icone2_xxhdpi"
            android:background="@color/Tuile_color" />

        <Button
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:text="@string/Button_incl"
            android:id="@+id/button_incl"
            android:onClick="startInclinaison"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="top|left|center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:gravity="center|bottom"
            android:drawableTop="@drawable/angle_icone2_xxhdpi"
            android:background="@color/Tuile_color" />

    </GridLayout>

</RelativeLayout>

    <fragment
        android:id="@+id/fragment_nav_drawer"
        android:name="com.example.simon.bubble_level.Activity.FragmentDrawer"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_nav_drawer"
        tools:layout="@layout/fragment_nav_drawer" />
</android.support.v4.widget.DrawerLayout>
