<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.simon.bubble_level.Activity.Activity_Tuyaux"
    android:id="@+id/drawer_layout_tuyaux"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/windowBackground">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/half_inch_button"
            android:id="@+id/button12Tuyaux"
            android:enabled="true"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:onClick="setHalfInche"
            android:layout_gravity="bottom"
            android:background="@color/Tuile_color"
            android:layout_marginBottom="15dp"
            android:nestedScrollingEnabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_quarter_button"
            android:id="@+id/button34Tuyaux"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:enabled="true"
            android:onClick="setThreeFourthInche"
            android:layout_gravity="bottom"
            android:background="@color/Tuile_color"
            android:layout_marginBottom="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_inch_button"
            android:id="@+id/button1Tuyaux"
            android:layout_marginLeft="10dp"
            android:onClick="setOneInche"
            android:background="@color/Tuile_color"
            android:layout_gravity="bottom"
            android:layout_marginBottom="15dp" />
    </LinearLayout>

    <com.example.simon.bubble_level.Drawing.Drawing_tuyau
        android:id="@+id/custViewTuyau"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        custom:circleColor="#fc0105"
        custom:detectColor="#01ff38"
        custom:labelColor="#080808"
        custom:circleLabel="Hello"
        />

    </RelativeLayout>
    <fragment
    android:id="@+id/fragment_nav_drawer"
    android:name="com.example.simon.bubble_level.Activity.FragmentDrawer"
    android:layout_width="@dimen/nav_drawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    app:layout="@layout/fragment_nav_drawer"
    tools:layout="@layout/fragment_nav_drawer" />
    </android.support.v4.widget.DrawerLayout>